pkl-core/src/test/files/LanguageSnippetTests/input/errors/listingTypeCheckError4.pkl
res: Listing<String(!isEmpty)> = new Listing<String(endsWith("ga"))> {
  "hola"
}
